# QtPlayground

./: .gitignore  CMakeLists.txt  README.md
resources/: MyButton.qml  MyToolbar.qml  main.qml  qml.qrc
src/: main.cpp
tests/: AutoTest.h  BechmarkedFoo.cpp  CMakeLists.txt  DataDrivenFoo.cpp  Foo.cpp  foo.cpp  main.cpp
